--- a/app/views/admin/jobs/edit.html.erb
+++ b/app/views/admin/jobs/edit.html.erb
@@ -7,6 +7,7 @@
 <%= f.input :wage_lower_bound, :label =>"薪资下线" %>
 <%= f.input :wage_upper_bound, :label =>"薪资上线" %>
 <%= f.input :contract_email %>
+<%= f.input :is_hidden %>
 
   <%= f.submit "Submit" %>
 <% end %>
