--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -15,6 +15,11 @@
     <td>
       <%= link_to("Edit", edit_admin_job_path(job)) %>
       <%= link_to("Destroy", admin_job_path(job), :method => :delete, :data => { :confirm => "Are you sure?" }) %>
+      <% if job.is_hidden %>
+        <%= link_to("公开", publish_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-default") %>
+      <% else %>
+        <%= link_to("隐藏", hide_admin_job_path(job), :method => :post, :class => "btn btn-default btn-xs") %>
+      <% end %>
     </td>
     <td>
       <%= job.created_at %>
