better welcome/index & admin/jobs/index

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,45 @@
-<h1> Hello World! </h1>
+<div class="jumbotron">
+  <h1 class="title">绿色家园，我们需要你</h1>
+  <p class="slogan">绿色家园组织，是一个致力于维护原生态环境的公益组织。我们需要专业人士的加盟。
+  <br>
+  我们提供合理的薪资和保障。但更重要是，参与到这份伟大的公益事业当中去。
+  <br>
+  期待你的加盟！环保需要你！
+  </p>
+  <p class="lead"><a class="btn btn-warning" href="/jobs">我要加盟</a></p>
+</div>
+
+<section id="company">
+  <div class = "container-fluid">
+    <div class= "row">
+
+      <div class="col-sm-4">
+        <div class="thumbnail">
+          <img src="http://y.photo.qq.com/img?s=VfqbvmFVI&l=y.jpg" alt="search">
+        </div>
+        <div class="caption">
+          <h3>北京市和平门大街西郊民巷13号</h3>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <div class="thumbnail">
+          <img src="http://y.photo.qq.com/img?s=9yBkCQVj7&l=y.jpg" alt="bid" class="img-thhumbnail">
+        </div>
+        <div class="caption">
+          <h3>chenw@gmail.com</h3>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <div class="thumbnail">
+          <img src="http://y.photo.qq.com/img?s=bAQJ8dfF4&l=y.jpg" alt="heart" >
+        </div>
+        <div class="caption">
+           <h3>40069921239</h3>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
