--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,63 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "font-awesome"
+@import "font-awesome";
+
+.jumbotron {
+  background-image: url('http://pic1.win4000.com/wallpaper/4/5665289423272.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 110px;
+}
+
+.title {
+  font-family: "Helvetica Neue", "Microsoft Yahei", 微软雅黑;
+  text-align: center;
+  // color: red;
+  margin-top: 50px;
+  margin-bottom: 80px;
+
+}
+
+.slogan {
+  margin-top: 10px;
+  margin-bottom: 50px;
+  text-align: left;
+  color: white;
+  top: 20px;
+}
+
+.lead {
+  margin-bottom: 60px;
+  text-align: center;
+  color: white;
+}
+
+.caption {
+  margin: 30px;
+  text-align: center;
+  top: 20px;
+}
+
+.thumbnail {
+    border: 0 none;
+    box-shadow: none;
+    margin-top: 60px;
+}
+
+.custab{
+  border: 1px solid #ccc;
+
+  padding: 5px;
+  margin: 5% 0;
+  box-shadow: 3px 3px 2px #ccc;
+// box-shadow 向框添加阴影
+  transition: 0.5s;
+}
+
+.custab:hover{
+  // :hover 选择器用于选择鼠标指针浮动在上面的元素。
+  box-shadow: 3px 3px 0px transparent;
+  transition: 0.5s;
+  // transition过度属性可以设定效果产生的时间延迟,速度曲线等
+}
