--- a/app/views/admin/resumes/_resume.html.erb
+++ b/app/views/admin/resumes/_resume.html.erb
@@ -18,6 +18,7 @@
 
     <% if resume.attachment.present? %>
      <i class="fa fa-paperclip"> </i>
+     <!-- 增加一个标签 -->
      <%= link_to("Download the resume", resume.attachment_url )%>
     <% else %>
       No Attachment
